refactor : dto getter, setter 필요 없고 Entity 설정 간소화 JpaRepository 쿼리 제거