@@ -1,22 +1,83 @@
 package com.tapioca.BE.application.dto.response.erd;
 
+import com.tapioca.BE.adapter.out.entity.AttributeEntity;
 import com.tapioca.BE.adapter.out.entity.AttributeLinkEntity;
+import com.tapioca.BE.adapter.out.entity.DiagramEntity;
 import com.tapioca.BE.adapter.out.entity.ErdEntity;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 public record ErdResponseDto(
-        UUID id,
-        String name,
+        UUID erdId,
+        String erdName,
         List<DiagramResponseDto> diagrams,
         List<AttributeLinkResponseDto> attributeLinks
 ) {
-    public static ErdResponseDto of(ErdEntity erdEntity, List<AttributeLinkEntity> attributeLinks) {
-        List<DiagramResponseDto> diagrams = erdEntity.getDiagrams().stream().map(DiagramResponseDto::of).toList();
-        List<AttributeLinkResponseDto> attributeLinkList = attributeLinks.stream()
-                .map(AttributeLinkResponseDto::of)
-                .toList();
-        return new ErdResponseDto(erdEntity.getId(), erdEntity.getName(), diagrams, attributeLinkList);
+    public static ErdResponseDto from(ErdEntity erdEntity) {
+        List<DiagramResponseDto> diagramDtos = erdEntity.getDiagrams().stream()
+                .map(DiagramResponseDto::from)
+                .collect(Collectors.toList());
+
+        List<AttributeLinkResponseDto> linkDtos = erdEntity.getAttributeLinks().stream()
+                .map(AttributeLinkResponseDto::from)
+                .collect(Collectors.toList());
+
+        return new ErdResponseDto(
+                erdEntity.getId(),
+                erdEntity.getName(),
+                diagramDtos,
+                linkDtos
+        );
+    }
+
+    public record DiagramResponseDto(
+            UUID diagramId,
+            String diagramName,
+            List<AttributeResponseDto> attributes
+    ) {
+        public static DiagramResponseDto from(DiagramEntity diagramEntity) {
+            List<AttributeResponseDto> attributes = diagramEntity.getAttributes().stream()
+                    .map(AttributeResponseDto::from)
+                    .collect(Collectors.toList());
+            return new DiagramResponseDto(diagramEntity.getId(), diagramEntity.getName(), attributes);
+        }
+    }
+
+    public record AttributeResponseDto(
+            UUID attributeId,
+            String attributeName,
+            String attributeType,
+            Integer varcharLength,
+            boolean primaryKey,
+            boolean foreignKey
+    ) {
+        public static AttributeResponseDto from(AttributeEntity a) {
+            return new AttributeResponseDto(
+                    a.getId(),
+                    a.getName(),
+                    a.getAttributeType().name(),
+                    a.getLength(),
+                    a.isPrimaryKey(),
+                    a.isForeignKey()
+            );
+        }
+    }
+
+    public record AttributeLinkResponseDto(
+            UUID linkId,
+            UUID fromAttributeId,
+            UUID toAttributeId,
+            String linkType
+    ){
+        public static AttributeLinkResponseDto from(AttributeLinkEntity attributeLinkEntity) {
+            return new AttributeLinkResponseDto(
+                    attributeLinkEntity.getId(),
+                    attributeLinkEntity.getFromAttribute().getId(),
+                    attributeLinkEntity.getToAttribute().getId(),
+                    attributeLinkEntity.getLinkType().name()
+            );
+        }
     }
 }
